--- a/signal.html
+++ b/signal.html
@@ -7,24 +7,137 @@
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Share Tech Mono', monospace}
-body{background:#000;min-height:100vh;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px}
-#matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
-.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column}
-.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer}
+body{
+  background:#000;
+  min-height:100vh;
+  color:#0f0;
+  overflow-x:hidden;
+  display:flex;
+  justify-content:center;
+  padding-top:20px;
+}
+#matrix{
+  position:fixed;
+  top:0;left:0;
+  width:100%;height:100%;
+  z-index:-1;
+}
+.panel{
+  width:90%;
+  max-width:900px;
+  background:rgba(0,0,0,0.6);
+  border:1px solid #0f0;
+  padding:30px 28px;
+  border-radius:12px;
+  backdrop-filter:blur(6px);
+  box-shadow:0 0 35px rgba(0,255,0,0.12);
+  display:flex;
+  flex-direction:column;
+}
+.title{
+  text-align:center;
+  font-size:24px;
+  margin-bottom:24px;
+  text-shadow:0 0 12px #0f0;
+  font-weight:bold;
+  cursor:pointer;
+}
 .row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
 .row label{font-size:15px;color:#0f0;font-weight:600}
-.row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px}
+.row select,.row input{
+  width:100%;
+  padding:12px;
+  background:#000;
+  border:1px solid #0f0;
+  color:#0f0;
+  border-radius:8px;
+  outline:none;
+  font-size:14px;
+}
 .btns{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap;justify-content:center}
-.btn{flex:1;min-width:150px;padding:12px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:1px solid #0f0;color:#000;border-radius:8px;cursor:pointer;font-size:15px;font-weight:bold;text-shadow:0 0 6px #0f0;transition:.2s;box-shadow:0 0 20px rgba(0,255,0,0.5)}
+.btn{
+  flex:1;
+  min-width:150px;
+  padding:12px;
+  background:linear-gradient(90deg,#00ff0f,#00cc8a);
+  border:1px solid #0f0;
+  color:#000;
+  border-radius:8px;
+  cursor:pointer;
+  font-size:15px;
+  font-weight:bold;
+  text-shadow:0 0 6px #0f0;
+  transition:.2s;
+  box-shadow:0 0 20px rgba(0,255,0,0.5);
+}
 .btn:hover{background:linear-gradient(90deg,#00cc8a,#00ff0f);box-shadow:0 0 24px #0f0}
-.output{margin-top:20px;padding:14px;border:1px dashed rgba(0,255,0,0.3);min-height:220px;white-space:pre-line;overflow-y:auto;border-radius:8px;font-size:14px;line-height:1.4}
-#assetBox{display:grid;grid-template-columns:repeat(2,1fr);gap:8px}
-#assetBox label{display:flex;justify-content:space-between;align-items:center;padding:6px 8px;border-radius:6px;border:1px solid rgba(0,255,0,0.2);transition:.2s;cursor:pointer}
-#assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0}
-#assetBox input[type="checkbox"]{accent-color:#0f0}
-.selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start}
+.output{
+  margin-top:20px;
+  padding:14px;
+  border:1px dashed rgba(0,255,0,0.3);
+  min-height:220px;
+  white-space:pre-line;
+  overflow-y:auto;
+  border-radius:8px;
+  font-size:14px;
+  line-height:1.4;
+}
+#assetBox{
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:8px;
+}
+#assetBox label{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:6px 8px;
+  border-radius:6px;
+  border:1px solid rgba(0,255,0,0.2);
+  transition:.2s;
+  cursor:pointer;
+}
+#assetBox label:hover{
+  background:rgba(0,255,0,0.1);
+  box-shadow:0 0 10px #0f0;
+}
+#assetBox input[type="checkbox"]{
+  accent-color:#0f0;
+}
+.selectAllBtn{
+  margin-top:6px;
+  background:rgba(0,0,0,0.6);
+  border:1px solid #0f0;
+  padding:6px 10px;
+  border-radius:6px;
+  cursor:pointer;
+  color:#0f0;
+  text-shadow:0 0 4px #0f0;
+  font-size:13px;
+  align-self:start;
+}
 .selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
-@media(max-width:500px){#assetBox{grid-template-columns:1fr}.btns{flex-direction:column}}
+#adminPanel{
+  display:none;
+  margin-top:20px;
+  padding:20px;
+  border:2px solid #0f0;
+  border-radius:12px;
+  background:rgba(0,0,0,0.7);
+}
+#adminPanel h3{
+  text-align:center;
+  color:#0f0;
+  margin-bottom:12px;
+}
+#adminPanel p{
+  color:#0f0;
+  font-size:14px;
+}
+@media(max-width:500px){
+  #assetBox{grid-template-columns:1fr;}
+  .btns{flex-direction:column;}
+}
 </style>
 </head>
 <body>
@@ -72,16 +185,23 @@ body{background:#000;min-height:100vh;color:#0f0;overflow-x:hidden;display:flex;
   </div>
 
   <div class="btns">
-    <button class="btn" onclick="triggerLicenseCheck()">⚡ GENERATE SIGNALS ⚡</button>
+    <button class="btn" onclick="showLicensePopup()">⚡ GENERATE SIGNALS ⚡</button>
     <button class="btn" onclick="copyAll()">COPY</button>
     <button class="btn" onclick="resetOut()">RESET</button>
   </div>
 
   <div class="output" id="out"></div>
+
+  <!-- Admin Panel -->
+  <div id="adminPanel">
+    <h3>ADMIN PANEL</h3>
+    <p>Manage licenses, devices, etc.</p>
+    <button onclick="hideAdmin()" style="padding:8px 12px; border:none; background:#0f0; color:#000; border-radius:6px; cursor:pointer;">Close Admin Panel</button>
+  </div>
 </div>
 
 <script>
-// ---------- MATRIX EFFECT ----------
+// Matrix Effect
 const c=document.getElementById('matrix');
 const ctx=c.getContext('2d');
 let fontSize=16;
@@ -91,41 +211,46 @@ function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Mat
 function initMatrix(){resize();setInterval(draw,40);}
 const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
 function draw(){
-  ctx.fillStyle='rgba(0,0,0,0.05)';ctx.fillRect(0,0,c.width,c.height);
-  ctx.fillStyle='#0f0';ctx.font=fontSize+'px Share Tech Mono';
+  ctx.fillStyle='rgba(0,0,0,0.05)';
+  ctx.fillRect(0,0,c.width,c.height);
+  ctx.fillStyle='#0f0';
+  ctx.font=fontSize+'px Share Tech Mono';
   for(let i=0;i<drops.length;i++){
       let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];
       ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-      if(drops[i]*fontSize>c.height && Math.random()>0.975)drops[i]=0;
+      if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0;
       drops[i]++;
   }
 }
 window.addEventListener('resize',initMatrix);
 initMatrix();
 
-// ---------- SIGNAL SYSTEM ----------
+// Signal System
 const realAssets = ["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
 const otcAssets = ["NZD/USD (OTC)"];
-
 function updateAssets(){
   const type=document.getElementById('marketType').value;
-  const box=document.getElementById('assetBox');box.innerHTML='';
+  const box=document.getElementById('assetBox');
+  box.innerHTML='';
   const assets=type==='real'?realAssets:otcAssets;
   assets.forEach(a=>{
     const label=document.createElement('label');
-    const input=document.createElement('input');input.type='checkbox';input.value=a;
+    const input=document.createElement('input');
+    input.type='checkbox';
+    input.value=a;
     label.appendChild(document.createTextNode(a));
     label.appendChild(input);
     box.appendChild(label);
   });
 }
 updateAssets();
-
 function randomAsset(selectedAssets){
-  if(selectedAssets.length>0){return selectedAssets[Math.floor(Math.random()*selectedAssets.length)];}
-  return realAssets[Math.floor(Math.random()*realAssets.length)];
+  if(selectedAssets.length>0){
+    return selectedAssets[Math.floor(Math.random()*selectedAssets.length)];
+  }else{
+    return realAssets[Math.floor(Math.random()*realAssets.length)];
+  }
 }
-
 function generateSignals(count){
   const signalBox=document.getElementById("out");
   signalBox.textContent="";
@@ -136,7 +261,7 @@ function generateSignals(count){
   current.setHours(current.getUTCHours()+tzOffset);
   let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;
   for(let i=0;i<count;i++){
-      const gap=Math.floor(Math.random()*6)+3; // 3-8 min
+      const gap=Math.floor(Math.random()*6)+3; // 3-8 minutes
       current.setMinutes(current.getMinutes()+gap);
       const t=current.toTimeString().substring(0,5);
       const asset=randomAsset(selectedAssets);
@@ -146,13 +271,18 @@ function generateSignals(count){
   output+=`\n            ━━━━━━・━━━━━━\n😈 Avoid signal after Doji, <80%, Gap, or 3–4 B2B opposite candles 😈\n            ━━━━━━・━━━━━━`;
   typeWrite(output,signalBox);
 }
-
 function typeWrite(text,element){
-  let index=0;element.textContent="";
-  function type(){if(index<text.length){element.textContent+=text.charAt(index);index++;setTimeout(type,15);}}
+  let index=0;
+  element.textContent="";
+  function type(){
+      if(index<text.length){
+          element.textContent+=text.charAt(index);
+          index++;
+          setTimeout(type,15);
+      }
+  }
   type();
 }
-
 function copyAll(){navigator.clipboard.writeText(document.getElementById('out').textContent);}
 function resetOut(){document.getElementById('out').textContent='';}
 function toggleSelectAll(){
@@ -161,88 +291,78 @@ function toggleSelectAll(){
   checkboxes.forEach(c=>c.checked=!allChecked);
 }
 
-// ---------- DEVICE + LICENSE ----------
-const validLicenses = ["LIC-12345","LIC-67890"]; // sample
-if(!localStorage.getItem("deviceID")) localStorage.setItem("deviceID","DEVICE-"+Math.random().toString(36).substring(2,12));
-
-function saveLicense(licenseID, durationDays=7){
-    const expire = Date.now() + durationDays*24*60*60*1000; // license in ms
-    const device = localStorage.getItem("deviceID");
-    localStorage.setItem("licensedID",licenseID);
-    localStorage.setItem("licenseExpire",expire);
-    localStorage.setItem("approvedDevice",device);
-}
-
-function getSavedLicense() {
-    return {
-        id: localStorage.getItem("licensedID"),
-        expire: parseInt(localStorage.getItem("licenseExpire") || "0"),
-        device: localStorage.getItem("approvedDevice")
-    };
-}
-
-function checkLicenseNoInput() {
-    const lic = getSavedLicense();
-    if(!lic.id || !lic.expire || !lic.device) return {valid:false, reason:"no_license"};
-    const now = Date.now();
-    const currentDevice = localStorage.getItem("deviceID");
-    if(now > lic.expire) return {valid:false, reason:"expired"};
-    if(currentDevice !== lic.device) return {valid:false, reason:"device_mismatch"};
-    return {valid:true};
-}
-
-function triggerLicenseCheck(){
-    const license = checkLicenseNoInput();
-    if(!license.valid){
-        showLicensePopup();
-        return;
-    }
-    const count = parseInt(document.getElementById('count').value) || 5;
-    generateSignals(count);
-}
-
+// License + Device Lock
+const validLicenses = [{key:"LIC-12345",device:""}]; // replace device="" dynamically
 function showLicensePopup(){
     const overlay = document.createElement("div");
-    overlay.style.position = "fixed";overlay.style.top = "0";overlay.style.left = "0";overlay.style.width = "100%";overlay.style.height = "100%";
-    overlay.style.background = "rgba(0,0,0,0.9)";overlay.style.display = "flex";overlay.style.justifyContent = "center";overlay.style.alignItems = "center";overlay.style.zIndex = "9999";
+    overlay.style.position = "fixed";
+    overlay.style.top = "0";
+    overlay.style.left = "0";
+    overlay.style.width = "100%";
+    overlay.style.height = "100%";
+    overlay.style.background = "rgba(0,0,0,0.9)";
+    overlay.style.display = "flex";
+    overlay.style.justifyContent = "center";
+    overlay.style.alignItems = "center";
+    overlay.style.zIndex = "9999";
+
     const box = document.createElement("div");
-    box.style.background = "#000";box.style.border = "2px solid #0f0";box.style.padding = "30px";box.style.borderRadius = "12px";
-    box.style.maxWidth = "400px";box.style.width = "90%";box.style.color = "#0f0";box.style.fontFamily = "'Share Tech Mono', monospace";box.style.textAlign = "center";box.style.boxShadow = "0 0 25px #0f0";
+    box.style.background = "#000";
+    box.style.border = "2px solid #0f0";
+    box.style.padding = "30px";
+    box.style.borderRadius = "12px";
+    box.style.maxWidth = "400px";
+    box.style.width = "90%";
+    box.style.color = "#0f0";
+    box.style.fontFamily = "'Share Tech Mono', monospace";
+    box.style.textAlign = "center";
+    box.style.boxShadow = "0 0 25px #0f0";
 
     box.innerHTML = `
         <h2>🛡 Hacking System 🛡</h2>
         <p>Enter your <b>License Key</b> below to access signals.</p>
         <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
-        <p>Create your account → <a href="https://broker-qx.pro/sign-up/?lid=1508486" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">Click Here</a></p>
-        <p>Deposit <b>20$</b> to get license.</p>
-        <p>Contact Telegram → <a href="https://t.me/traderParvej" target="_blank" style="color:#0f0;text-decoration:underline;font-weight:bold;">@traderParvej</a></p>
         <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
         <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
     `;
-    overlay.appendChild(box);document.body.appendChild(overlay);
+    overlay.appendChild(box);
+    document.body.appendChild(overlay);
 
-    document.getElementById("popupClose").onclick = ()=>{document.body.removeChild(overlay);}
-    document.getElementById("popupSubmit").onclick = ()=>{
-        const licenseKey = document.getElementById("popupLicense").value.trim();
-        if(validLicenses.includes(licenseKey)){
-            saveLicense(licenseKey,7); // 7-day license
-            document.body.removeChild(overlay);
-            const count = parseInt(document.getElementById('count').value) || 5;
-            generateSignals(count);
-        } else alert("❌ Invalid License! Contact @traderParvej.");
-    };
+    document.getElementById("popupClose").onclick = () => document.body.removeChild(overlay);
+
+    document.getElementById("popupSubmit").onclick = () => {
+        const licenseInput = document.getElementById("popupLicense").value.trim();
+        let lic = validLicenses.find(l=>l.key===licenseInput);
+        if(lic){
+            const deviceId = localStorage.getItem("deviceId") || crypto.randomUUID();
+            localStorage.setItem("deviceId", deviceId);
+
+            if(!lic.device || lic.device===deviceId){
+                lic.device=deviceId;
+                document.body.removeChild(overlay);
+                const count = parseInt(document.getElementById('count').value) || 5;
+                generateSignals(count);
+            } else {
+                alert("This license is already used on another device.");
+            }
+        } else {
+            alert("Invalid License!");
+        }
+    }
 }
 
-// ---------- ADMIN PANEL (5 CLICK UNLOCK) ----------
+// Admin Panel Unlock
 let adminClick = 0;
-document.getElementById('panelTitle').addEventListener('click',()=>{
+const adminPanel = document.getElementById('adminPanel');
+document.getElementById('panelTitle').addEventListener('click', () => {
     adminClick++;
     if(adminClick>=5){
-        alert("⚡ Admin Panel Unlocked ⚡\nYou can now access admin features.");
+        adminPanel.style.display='block';
         adminClick=0;
-        // Here you can show admin panel div if any
+        alert("⚡ Admin Panel Unlocked ⚡");
     }
 });
+function hideAdmin(){adminPanel.style.display='none';}
 </script>
 </body>
 </html>
